Changes... Content is missing

--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -68,7 +68,7 @@
               <h1>Rodiles de M&eacute;xico</h1>
                 <h3>Expertos en Asesor&iacute;a Comercial y Desarrollo Web</h3>
                     <p>Ponemos a tu disposici&oacute;n m&aacute;s de <span class="counter">160 000</span> horas de experiencia en el Ramo Comercial para crear, mejorar, adaptar o renovar tu fuerza de ventas.</p>
-                    <p>Tambi&eacute;n contamos con una s&oacute;lida experienca en desarrollo de sitios web corporativos, tiendas en l&iacute;nea, CV digitales, portafolios de presentaci&oacute;n, restaurantes, etc.</p>
+                    <p>Tambi&eacute;n contamos con una s&oacute;lida experienca en desarrollo de sitios web corporativos, tiendas en l&iacute;nea, CV digitales, portafolios de presentaci&oacute;n, restaurantes en l&iacute;nea, negocios, blogs, centrales de reservas, etc.</p>
         </div>
 
         <div class="row" id="consulting">
@@ -99,48 +99,48 @@
 
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
-            <div class="row clients">
-                <div class="row">    
+            <div class="row clients center">
+                <div class="row mb32">    
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/brusmall.png" alt="Babies R Us logo" title="Babies R Us logo">
+                            <img src="img/babiesrus.png" alt="Babies R Us logo" title="Babies R Us logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/cachesmall.png" alt="Cache logo" title="Cache logo">
+                            <img src="img/toysrus.png" alt="Toys R Us logo" title="Toys R Us logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/hebsmall.png" alt="H E B logo" title="H E B logo">
+                            <img src="img/heb.jpg" alt="H E B logo" title="H E B logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/huaweismall.png" alt="Huawei logo" title="Huawei logo">
+                            <img src="img/huawei.png" alt="Huawei logo" title="Huawei logo">
                         </div>
                     </div>
                 </div>
                 <div class="row">    
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/justicesmall.png" alt="Shop Justice logo" title="Shop Justice logo">
+                            <img src="img/justice.png" alt="Shop Justice logo" title="Shop Justice logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/navarresmall.png" alt="Navarre Corporation logo" title="Navarre Corporation logo">
+                            <img src="img/exchange.png" alt="Shop my Exchange logo" title="Exchange logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/nexcomsmall.png" alt="Shop Nexcom logo" title="Shop Nexcom logo">
+                            <img src="img/nexcom.png" alt="Navy Exchange logo" title="Navy Exchange logo">
                         </div>
                     </div>
                     <div class="col-s-3 col-xs-3">
                         <div class="">
-                            <img src="img/trusmall.png" alt="Toys R Us logo" title="Toys R Us logo">
+                            <img src="img/gruponafa.png" alt="Grupo Nafa logo" title="Grupo Nafa logo">
                         </div>
                     </div>
                 </div>
