--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -5,7 +5,7 @@
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Site description." />
+    <meta name="description" content="Somos una empresa proveedora de servicios de asesor&iacute;a comercial, gesti&oacute;n de cartera de clientes, dise&ntilde;o y desarrollo web profesional." />
     
     <title>Rodiles de M&eacute;xico</title>
     
