--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -92,45 +92,46 @@
 
             <div class="row clients center">
                 <p>Estos son algunas de las empresas con los que hemos trabajado:</p>
-                <div class="row mb32">    
-                    <div class="col-s-3 col-xs-3">
+                <div class="row">    
+                    <div class="col-s-3 block-row-xxs-2">
                         <div class="logo">
                             <a href="http://www.toysrus.pl/babiesrus/" onclick="window.open(this.href,'_blank');return false;"><img src="img/babiesrus.png" alt="Babies R Us logo" title="Babies R Us logo"></a>
                         </div>
                     </div>
-                    <div class="col-s-3 col-xs-3">
+                    <div class="col-s-3 block-row-xxs-2">
                         <div class="logo">
                             <a href="http://www.toysrus.pl/toys/" onclick="window.open(this.href,'_blank');return false;"><img src="img/toysrus.png" alt="Toys R Us logo" title="Toys R Us logo"></a>
                         </div>
                     </div>
-                    <div class="col-s-3 col-xs-3">
-                        <div class="logo">
-                            <a href="http://www.heb.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/heb.jpg" alt="H E B logo" title="H E B logo"></a>
-                        </div>
-                    </div>
-                    <div class="col-s-3 col-xs-3">
-                        <div class="logo">
-                            <a href="http://www.gethuawei.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/huawei.png" alt="Huawei logo" title="Huawei logo"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">    
-                    <div class="col-s-3 col-xs-3">
-                        <div class="logo">
-                            <a href="http://www.shopjustice.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/justice.png" alt="Shop Justice logo" title="Shop Justice logo"></a>
-                        </div>
-                    </div>
-                    <div class="col-s-3 col-xs-3">
+                    <div class="col-s-3 block-row-xxs-2">
                         <div class="logo">
                             <a href="http://www.shopmyexchange.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/exchange.png" alt="Shop my Exchange logo" title="Exchange logo"></a>
                         </div>
                     </div>
-                    <div class="col-s-3 col-xs-3">
+                    <div class="col-s-3 block-row-xxs-2">
+                        <div class="logo">
+                            <a href="http://www.heb.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/heb.jpg" alt="H E B logo" title="H E B logo"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">    
+                    <div class="col-s-3 block-row-xxs-2">
+                        <div class="logo">
+                            <a href="http://www.shopjustice.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/justice.png" alt="Shop Justice logo" title="Shop Justice logo"></a>
+                        </div>
+                    </div>
+                    <div class="col-s-3 block-row-xxs-2">
+                        <div class="logo">
+                            <a href="http://www.gethuawei.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/huawei.png" alt="Huawei logo" title="Huawei logo"></a>
+                        </div>
+                    </div>
+                    <div class="col-s-3 block-row-xxs-2">
                         <div class="logo">
                             <a href="http://www.mynavyexchange.com/" onclick="window.open(this.href,'_blank');return false;"><img src="img/nexcom.png" alt="Navy Exchange logo" title="Navy Exchange logo"></a>
                         </div>
                     </div>
-                    <div class="col-s-3 col-xs-3">
+                    <div class="col-s-3 block-row-xxs-2">
                         <div class="logo">
                             <a href="http://www.gruponafa.com" onclick="window.open(this.href,'_blank');return false;"><img src="img/gruponafa.png" alt="Grupo Nafa logo" title="Grupo Nafa logo"></a>
                         </div>
