--- a/resume_mid_2015-5.5.2/index.html
+++ b/resume_mid_2015-5.5.2/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="css/styles.css" />
     
   </head>
-  <body id="top">
+  <body>
   <!-- open/close -->
     <div class="overlay overlay-corner">
       <button type="button" class="overlay-close">Close</button>
       <nav>
         <ul>
-          <li><a href="#top">Home</a></li>
+          <li><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#experience">Experience</a></li>
@@ -24,7 +24,7 @@
         </ul>
       </nav>
     </div>
-    <div class="row collapse" id="home">
+    <header class="row collapse" id="home">
       <!-- Top Navigation -->
       <section class="columns small-6">
         <h1>UI &middot; UX Specialist</h1>
@@ -32,8 +32,8 @@
       <section class="columns small-6 text-right">
         <p>Menu <img id="trigger-overlay" src="img/menu.png" alt="Menu icon"></p>
       </section>
-    </div>
-    <section class="row hero" id="about">
+    </header>
+    <section class="row hero" id="intro">
       <div class="texture-overlay"></div>
         <div class="row me">
           <div class="columns small-12">
@@ -45,6 +45,11 @@
           </div>
         </div>
     </section>
+    <section class="row" id="about">
+      <article>
+        <h2>About</h2>
+      </article>
+    </section>
     <section class="row" id="skills">
         <article>
           <h2>Skills</h2>
@@ -53,6 +58,7 @@
     <section class="row" id="experience">
       <article>
         <h2>Experience</h2>
+
       </article>
     </section>
     <section class="row" id="contact">
