--- a/violetaestudio_2015-5.5.2/index.html
+++ b/violetaestudio_2015-5.5.2/index.html
@@ -26,6 +26,7 @@
     <meta name="msapplication-square150x150logo" content="http://violetaestudio.com/img/mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="http://violetaestudio.com/img/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="http://violetaestudio.com/img/mstile-310x310.png" />
+    <meta name="p:domain_verify" content="3b224cd1483f8e6d6adfefc3fdf6cb2a"/>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/welcome.css" />
     
@@ -47,16 +48,16 @@
         <h2>Muy pronto daremos de que hablar.</h2>
       </div>
       <div class="blur">
-        <img data-interchange="[http://violetaestudio.com/img/hero-mobile.jpg, (small)], [http://violetaestudio.com/img/hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/hero-desktop.jpg, (large)]" class="bg">
+        <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)]" class="bg">
       </div>
     </section>
-    <img data-interchange="[http://violetaestudio.com/img/hero-mobile.jpg, (small)], [http://violetaestudio.com/img/hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/hero-desktop.jpg, (large)]" class="bg">
+    <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)]" class="bg">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
      <filter id="blur">
        <feGaussianBlur stdDeviation="10" />
       </filter>
     </svg> 
-
+    <script src="js/retina.min.js"></script>
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
