--- a/violetaestudio_2015-5.5.2/index-copy.html
+++ b/violetaestudio_2015-5.5.2/index-copy.html
@@ -39,11 +39,11 @@
       <div class="texture-overlay"></div>
         <div class="row me">
           <div class="columns small-12">
-            <h2>Miguel Angel Rodriguez Alvarez Icaza</h2>
+            <h2>Descubre lo que podemos hacer por ti</h2>
           </div>
           <div class="columns small-12">
-            <a href="#contact"><button>Contact me</button></a>
-            <button>Learn more</button>
+            <a href="#contact"><button>Contacto</button></a>
+            <button>Saber m&aacute;s</button>
           </div>
         </div>
     </section>
@@ -158,9 +158,6 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="columns small-12 small-centered">
-        <p>&copy; Copyright 2015. Mikerai.com</p>
       </section>
 
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="0">
