Changes in layout

--- a/violetaestudio_2015-5.5.2/index-copy.html
+++ b/violetaestudio_2015-5.5.2/index-copy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Arquitectura llevada a otro nivel. Somos especialistas en proyectos, urbanización, calidad y servicios de arquitectura.">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="fonts/vicons/vicons-font.css" />
     <link rel="stylesheet" href="css/styles.css" />
     
