--- a/violetaestudio_2015-5.5.2/index-copy.html
+++ b/violetaestudio_2015-5.5.2/index-copy.html
@@ -173,7 +173,7 @@
     </footer>
 
     <!-- /container -->
-    
+    <script src="js/retina.min.js"></script>
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
