--- a/violetaestudio_2015-5.5.2/index.html
+++ b/violetaestudio_2015-5.5.2/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="index, follow">
     <meta name="description" content="Arquitectura llevada a otro nivel. Somos especialistas en proyectos, urbanización, calidad y servicios de arquitectura.">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://violetaestudio.com/img/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://violetaestudio.com/img/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://violetaestudio.com/img/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://violetaestudio.com/img/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://violetaestudio.com/img/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://violetaestudio.com/img/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://violetaestudio.com/img/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://violetaestudio.com/img/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="http://violetaestudio.com/img/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="http://violetaestudio.com/img/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="http://violetaestudio.com/img/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="http://violetaestudio.com/img/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="http://violetaestudio.com/img/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="img/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="img/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="img/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="img/favicon-128.png" sizes="128x128" />
     <meta name="application-name" content="Violeta Estudio"/>
     <meta name="msapplication-TileColor" content="#6E3093" />
-    <meta name="msapplication-TileImage" content="http://violetaestudio.com/img/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="http://violetaestudio.com/img/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="http://violetaestudio.com/img/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="http://violetaestudio.com/img/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="http://violetaestudio.com/img/mstile-310x310.png" />
+    <meta name="msapplication-TileImage" content="img/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="img/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="img/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="img/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="img/mstile-310x310.png" />
     <meta name="p:domain_verify" content="3b224cd1483f8e6d6adfefc3fdf6cb2a"/>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/welcome.css" />
