--- a/violetaestudio_2015-5.5.2/index.html
+++ b/violetaestudio_2015-5.5.2/index.html
@@ -27,8 +27,7 @@
     <meta name="msapplication-wide310x150logo" content="http://violetaestudio.com/img/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="http://violetaestudio.com/img/mstile-310x310.png" />
     <meta name="p:domain_verify" content="3b224cd1483f8e6d6adfefc3fdf6cb2a"/>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/welcome.css" />
+    <link rel="stylesheet" href="css/welcome.min.css" />
     
   </head>
   <body>
@@ -61,7 +60,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/foundation/foundation.interchange.js"></script>
+    <script src="js/interchange.min.js"></script>
     <script>
       $(document).foundation();
     </script>
