Added button's title

--- a/violetaestudio_2015-5.5.2/index-copy.html
+++ b/violetaestudio_2015-5.5.2/index-copy.html
@@ -36,7 +36,7 @@
   <body>
   <!-- open/close -->
     <div class="overlay overlay-corner">
-      <button type="button" class="overlay-close">Close</button>
+      <button type="button" class="overlay-close" title="Click here to close">Close</button>
       <nav>
         <ul>
           <li><a href="#intro">Home</a></li>
