--- a/violetaestudio_2015-5.5.2/index.html
+++ b/violetaestudio_2015-5.5.2/index.html
@@ -38,10 +38,10 @@
         <h2>Muy pronto daremos de que hablar.</h2>
       </div>
       <div class="blur">
-        <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)], [http://violetaestudio.com/img/violet-hero-desktop-xlarge.jpg, (xlarge)]" class="bg">
+        <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)], [http://violetaestudio.com/img/violet-hero-desktop-xlarge.jpg, (xlarge)]" class="bg" alt="Fondo de pantalla con imágenes relacionadas con Violeta Estudio" title="Fondo de pantalla">
       </div>
     </section>
-    <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)], [http://violetaestudio.com/img/violet-hero-desktop-xlarge.jpg, (xlarge)]" class="bg">
+    <img data-interchange="[http://violetaestudio.com/img/violet-hero-mobile.jpg, (small)], [http://violetaestudio.com/img/violet-hero-tablet.jpg, (medium)], [http://violetaestudio.com/img/violet-hero.jpg, (large)], [http://violetaestudio.com/img/violet-hero-desktop-xlarge.jpg, (xlarge)]" class="bg" alt="Fondo de pantalla con imágenes relacionadas con Violeta Estudio" title="Fondo de pantalla">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
      <filter id="blur">
        <feGaussianBlur stdDeviation="10" />
