Updated template, scss and js for homepage

--- a/violetaestudio_2015-5.5.2/index-copy.html
+++ b/violetaestudio_2015-5.5.2/index-copy.html
@@ -150,37 +150,42 @@
       </article>
     </section>
     
-    <footer class="row">
-      <section class="columns small-12 small-centered content">
-        <div class="share">
-          <button class="share-toggle-button">
-            <i class="share-icon fa fa-share-alt"></i>
-          </button>
-          <ul class="share-items">
-            <li class="share-item">
-              <a href="http://www.linkedin.com/in/mikerai/en" target="_blank" class="share-button">
-                <i class="share-icon fa fa-linkedin"></i>
-              </a>
-            </li>
-            <li class="share-item">
-              <a href="https://twitter.com/mikerai_UX" target="_blank" class="share-button">
-                <i class="share-icon fa fa-twitter"></i>
-              </a>
-            </li>
-            <li class="share-item">
-              <a href="https://itunes.apple.com/mx/artist/phiveleven-llc-mikerai/id461579017?l=en" target="_blank" class="share-button">
-                <i class="share-icon fa fa-apple"></i>
-              </a>
-            </li>
-            <li class="share-item">
-              <a href="https://plus.google.com/u/2/+MiguelAngelRodríguezAlvarezIcaza/posts/" target="_blank" class="share-button">
-                <i class="share-icon fa fa-google-plus"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
+    <footer class="row" data-equalizer>
+      <section class="columns small-3" data-equalizer-watch>
+        <p>Copyright &copy; 2015 Violeta Estudio</p>
       </section>
-
+        <section class="columns small-6 content" data-equalizer-watch>
+            <div class="share">
+              <button class="share-toggle-button">
+                <i class="share-icon fa fa-share-alt"></i>
+              </button>
+              <ul class="share-items">
+                <li class="share-item">
+                  <a href="http://www.linkedin.com/in/mikerai/en" target="_blank" class="share-button">
+                    <i class="share-icon fa fa-linkedin"></i>
+                  </a>
+                </li>
+                <li class="share-item">
+                  <a href="https://twitter.com/mikerai_UX" target="_blank" class="share-button">
+                    <i class="share-icon fa fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="share-item">
+                  <a href="https://itunes.apple.com/mx/artist/phiveleven-llc-mikerai/id461579017?l=en" target="_blank" class="share-button">
+                    <i class="share-icon fa fa-apple"></i>
+                  </a>
+                </li>
+                <li class="share-item">
+                  <a href="https://plus.google.com/u/2/+MiguelAngelRodríguezAlvarezIcaza/posts/" target="_blank" class="share-button">
+                    <i class="share-icon fa fa-google-plus"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+        </section>
+      <section class="columns small-3 text-center" data-equalizer-watch>
+        <a href="#intro">Back to top</a>
+      </section>
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="0">
         <defs>
           <filter id="goo">
@@ -190,7 +195,6 @@
           </filter>
         </defs>
       </svg>
-
     </footer>
 
     <!-- /container -->
