Changes to add client pictures

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -24,11 +24,11 @@
           <div class="columns small-7">
             <h1>Miguel Angel Rodr&iacute;guez Alvarez Icaza</h1>
           </div>
-          <div class="columns small-5">
+          <div class="columns small-5 text-right">
             <h2>UI:UX Specialist</h2>
           </div>
           <div class="columns small-12">
-            <p>I design beautiful and engaging user experiences for the web</p>
+            <p class="text-center">I design beautiful and engaging user experiences for the web</p>
           </div>
       </article>
     </section>
@@ -59,12 +59,20 @@
       </div>
     </section>
 
-    <section class="row collapse portfolio" id="portfolio">
-      <div>
+    <section class="row collapse align-middle portfolio" id="portfolio">
+      <div class="columns small-12">
         <h3>This is what I have done</h3>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, odit dolore dolorem officiis obcaecati molestiae quasi magnam neque natus, similique magni nam. Magnam soluta nostrum porro eligendi assumenda, molestias officia.</div>
-      <div>Quia, sint iste iusto accusantium vitae doloribus suscipit molestiae corrupti, quis explicabo nihil ad alias corporis tempore reprehenderit. Dolorem alias, tempore incidunt quisquam architecto, earum unde repellat distinctio nulla cum!</div>
-      <div>Laboriosam corrupti, accusamus at nisi odio! Quod pariatur facilis nesciunt aliquid quisquam ratione, quasi eum ut iste repellat at magnam qui, dignissimos delectus expedita! Iure earum, ipsa dolorum illo. Id.</div>
+      </div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://shopmyexchange.com" target="_blank"><img src="img/exchange.png" alt="Shop my Exchange online store" title="Air Force and Army Exchange Service"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://mynavyexchange.com" target="_blank"><img src="img/nexcom.png" alt="Navy Exchange online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://shopjustice.com" target="_blank"><img src="img/justice.png" alt="Justice online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://gethuawei.com" target="_blank"><img src="img/huawei.png" alt="Huawei online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://lowes.com.mx" target="_blank"><img src="img/lowes.png" alt="Lowe's online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://lenox.com" target="_blank"><img src="img/lenox.png" alt="Lenox online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://www.toysrus.co.uk/" target="_blank"><img src="img/tru.png" alt="Toys R Us and Babies R Us online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://dressbarn.com" target="_blank"><img src="img/dressbarn.png" alt="Dressbarn and dressbar online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mb15"><a href="http://naturalpartners.com" target="_blank"><img src="img/natural_partners.png" alt="Natural Partners online store"></a></div>
+      <div class="columns small-6 medium-3 medium-offset-6 text-center mb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store"></a></div>
     </section>
 
     <section class="row collapse contact" id="contact">
@@ -87,8 +95,9 @@
     </footer>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/what-input/what-input.js"></script>
+    <script src="bower_components/what-input/what-input.min.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
+    <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
