A lot of improvements.

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -21,14 +21,22 @@
     <section class="row hero expanded align-middle" id="home">
       <div id="parallax-bg"></div>
         <article class="row hero-content align-middle">
-          <div class="columns small-7">
+          <div class="row column small-12">
+            <div class="columns b1"></div>
+            <div class="columns b2"></div>
+            <div class="columns b3"></div>
+            <div class="columns b4"></div>
+            <div class="columns b5"></div>
+          </div>
+          <div class="columns small-12 medium-10 medium-centered">
             <h1>Miguel Angel Rodr&iacute;guez Alvarez Icaza</h1>
           </div>
-          <div class="columns small-5 text-right">
+          <div class="columns small-12">
             <h2>UI:UX Specialist</h2>
           </div>
           <div class="columns small-12">
-            <p class="text-center">I design beautiful and engaging user experiences for the web</p>
+            <p>I design beautiful and engaging user experiences for the web</p>
+            <a href="#contact" class="hollow large button">Contact me</a>
           </div>
       </article>
     </section>
@@ -39,19 +47,56 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos commodi, illum, at soluta, ducimus eius mollitia nam quam nulla obcaecati quis, quo. Maxime aspernatur, deserunt ratione quam nulla, odit quidem!</p>
       </div>
     </section>
-  
-    <section class="row collapse education" id="education">
-      <h3>Academic Background</h3>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum perspiciatis et deserunt, consequuntur esse quas ipsum fuga neque eos sed odio totam, quasi, maxime quo, tenetur incidunt explicabo culpa nemo.
-    </section>
 
-     <section class="row collapse skills" id="skills">
+    <section class="row collapse skills" id="skills">
       <div>
         <h3>What I am good at</h3>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, odit dolore dolorem officiis obcaecati molestiae quasi magnam neque natus, similique magni nam. Magnam soluta nostrum porro eligendi assumenda, molestias officia.</div>
       <div>Quia, sint iste iusto accusantium vitae doloribus suscipit molestiae corrupti, quis explicabo nihil ad alias corporis tempore reprehenderit. Dolorem alias, tempore incidunt quisquam architecto, earum unde repellat distinctio nulla cum!</div>
       <div>Laboriosam corrupti, accusamus at nisi odio! Quod pariatur facilis nesciunt aliquid quisquam ratione, quasi eum ut iste repellat at magnam qui, dignissimos delectus expedita! Iure earum, ipsa dolorum illo. Id.</div>
     </section>
+  
+    <section class="row collapse education" id="education">
+      <div class="columns small-12">
+        <h3>Academic Background</h3>
+      </div>
+      <article class="row small-uncollapse medium-collapse column small-12 align-middle">
+        <div class="columns small-4 medium-5">
+          <img alt="Instituto Universitario de la Empresa" title="Instituto Universitario de la Empresa" data-interchange="[img/iude.png, small], [img/iude.png, medium], [img/iude.png, large], [img/uniovi@2x.png, retina]">
+        </div>
+        <div class="columns small-8 medium-7">
+          <h4>Master in Business Administration</h4>
+          <p>Instituto de la Empresa de la Universidad de Oviedo.</p>
+          <p>Asturias. Spain.</p>
+          <p>2002 - 2003</p>
+          <p>Business Administation and Management, General.</p>
+          <p class="strong">Summa Cum Laude</p>
+        </div>
+      </article>
+      <article class="row small-uncollapse medium-collapse column small-12 align-middle">
+        <div class="columns small-4 medium-5">
+          <img src="img/itesm.png" alt="Instituto Tecnologico y de Estudios Superiores de Monterrey" title="Instituto Tecnologico y de Estudios Superiores de Monterrey">
+        </div>
+        <div class="columns small-8 medium-7">
+          <h4>Bachelor of Engineering</h4>
+          <p>ITESM CEM</p>
+          <p>Mexico City</p>
+          <p>1995 - 2000</p>
+          <p>Mechanical and Electrical Engineering.</p>
+        </div>
+      </article>
+      <article class="row small-uncollapse medium-collapse column small-12 align-middle">
+        <div class="columns small-4 medium-5">
+          <img src="img/unadm.png" alt="Universidad Abierta y a Distancia de Mexico" title="Universidad Abierta y a Distancia de Mexico">
+        </div>
+        <div class="columns small-8 medium-7">
+          <h4>Bachelor of Engineering. <i>In Progress</i></h4>
+          <p>UNADM</p>
+          <p>2015 - 2018</p>
+          <p>Computer Science Engineering.</p>
+        </div>
+      </article>
+    </section> 
 
     <section class="row tools" id="tools">
       <div class="small-12 columns">
@@ -63,26 +108,63 @@
       <div class="columns small-12">
         <h3>This is what I have done</h3>
       </div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://shopmyexchange.com" target="_blank"><img src="img/exchange.png" alt="Shop my Exchange online store" title="Air Force and Army Exchange Service"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://mynavyexchange.com" target="_blank"><img src="img/nexcom.png" alt="Navy Exchange online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://shopjustice.com" target="_blank"><img src="img/justice.png" alt="Justice online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://gethuawei.com" target="_blank"><img src="img/huawei.png" alt="Huawei online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://lowes.com.mx" target="_blank"><img src="img/lowes.png" alt="Lowe's online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://lenox.com" target="_blank"><img src="img/lenox.png" alt="Lenox online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://www.toysrus.co.uk/" target="_blank"><img src="img/tru.png" alt="Toys R Us and Babies R Us online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://dressbarn.com" target="_blank"><img src="img/dressbarn.png" alt="Dressbarn and dressbar online store"></a></div>
-      <div class="columns small-6 medium-3 text-center mb15"><a href="http://naturalpartners.com" target="_blank"><img src="img/natural_partners.png" alt="Natural Partners online store"></a></div>
-      <div class="columns small-6 medium-3 medium-offset-6 text-center mb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://shopmyexchange.com" target="_blank"><img src="img/exchange.png" alt="Shop my Exchange online store" title="Air Force and Army Exchange Service"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://mynavyexchange.com" target="_blank"><img src="img/nexcom.png" alt="Navy Exchange online store" title="US Navy Exchange Service"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://shopjustice.com" target="_blank"><img src="img/justice.png" alt="Justice online store" title="Justice clothes online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://gethuawei.com" target="_blank"><img src="img/huawei.png" alt="Huawei online store" title="Mobile phones and accessories from Huawei"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://lowes.com.mx" target="_blank"><img src="img/lowes.png" alt="Lowe's online store" title="Lowe's online store on Mexico"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://lenox.com" target="_blank"><img src="img/lenox.png" alt="Lenox online store" title="Lenox online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://www.toysrus.co.uk/" target="_blank"><img src="img/tru.png" alt="Toys R Us and Babies R Us online store" title="Toys R Us and Babies R Us online store for the UK"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://dressbarn.com" target="_blank"><img src="img/dressbarn.png" alt="Dressbarn and dressbar online store" title="Dressbarn and dressbar online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://naturalpartners.com" target="_blank"><img src="img/natural_partners.png" alt="Natural Partners online store" title="Natural Partners online store"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico corporate site" title="Rodiles de Mexico corporate site"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://gruponafa.com" target="_blank"><img src="img/nafa.png" alt="Grupo Nafa corporate site" title="Grupo Nafa corporate site"></a></div>
+      <div class="columns small-6 medium-3 text-center mtb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store" title="Work N Gear online store"></a></div>
     </section>
 
-    <section class="row collapse contact" id="contact">
-      <h3>Contact Me</h3>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat fugit, modi voluptate? Saepe porro sunt blanditiis quaerat architecto, maiores, odit, quo laborum, vel quibusdam repellat. Totam, nulla recusandae accusantium consequatur.
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, earum porro. Aliquam illo expedita libero tempore iste, error, fugit cumque doloribus voluptates impedit recusandae nesciunt voluptatibus labore, accusamus autem dolor.</div>
-      <div>Cum, ab quo atque quod aliquam sint quia, excepturi inventore et veniam dolores, nemo. Labore consequatur obcaecati, incidunt ut totam alias assumenda sed, accusantium, iure, provident esse eius culpa dicta.</div>
-      <div>Magni, distinctio inventore accusantium, ipsam quod fugiat. Dignissimos at omnis nisi, odit suscipit minus iste dolore recusandae illum expedita. Voluptas laudantium, exercitationem iusto. Delectus quaerat ut est officiis tenetur tempore.</div>
-      <div>Reprehenderit consequuntur voluptates veniam ratione, sapiente, nobis maiores ad eos dolorem voluptatum, libero ipsum. Eius, est nulla, maxime excepturi dignissimos quas autem accusamus sequi veritatis vitae! Voluptatibus consectetur laborum dicta?</div>
-      
+    <section class="row small-uncollapse medium-collapse contact" id="contact">
+      <div class="columns small-12">
+        <h3>Contact Me</h3>
+      </div>
+      <article class="row small-uncollapse medium-collapse column small-12">
+        <div class="columns small-12 medium-5">
+          <form action="" data-abide novalidate>
+            <div class="row small-uncollapse medium-collapse">
+              <div class="small-12 columns">
+                <label>Your name
+                  <input type="text" placeholder="Your Name goes here" aria-describedby="Please enter your name so I can know who I am addressing to" required pattern="text">
+                  <span class="form-error">
+                    Please enter your Name.
+                  </span>
+                </label>
+              </div>
+              <div class="small-12 columns">
+                <label>Your e-mail address
+                  <input type="text" placeholder="Your e-mail address goes here" aria-describedby="Please enter your email address so I can contact you back" required pattern="email">
+                  <span class="form-error">
+                    Please enter your email address.
+                  </span>
+                </label>
+              </div>
+              <div class="small-12 columns">
+                <label>Your e-mail address
+                  <textarea placeholder="None"  aria-describedby="Please enter your message so I can know how I can assist you" required pattern="text"></textarea>
+                  <span class="form-error">
+                    Please include something on your message.
+                  </span>
+                </label>
+              </div>
+              <div class="columns small-12 text-right">
+                <button class="submit large button" type="submit">Send</button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="columns medium-7 text-center linkedin">
+          <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikerai" data-format="inline" data-related="false" data-width="300"></script>
+        </div>
+      </article>    
     </section>
 
     <footer class="row expanded align-middle">
